Build stage with compose